# snpseq-archive-verify

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
archive_verify/: __init__.py  app.py  handlers.py  pdc_client.py  redis_client.py  workers.py
config/: app.yaml
docker/: Dockerfile  down  log  nginx.conf  start.sh  up
requirements/: dev  prod
tests/: mock_redis_client.py  test_config.yaml  test_handlers.py  test_pdc_client.py  test_workers.py
